--- a/steptu/Web/Tpl/index/Index/index.html
+++ b/steptu/Web/Tpl/index/Index/index.html
@@ -60,24 +60,26 @@ background-repeat: no-repeat;
       <div class="ScrCont">
        <div id="List1">
         <!-- 图片列表 begin -->
+       
          <div class="pic">
-          <a href="<#ZC_BLOG_HOST#>?cat=1" target="_blank"><img src="__IMG__/youhui1.jpg" width="145" height="145" alt="一号图片"  onload="return imgzoom(this,600);" onclick="javascript:window.open(this.src);" style="cursor:pointer;"/></a>
-          <a href="<#ZC_BLOG_HOST#>?cat=1" target="_blank"><div style="font-size:15px;font-family: SimHei;color:#046bb3;">桂林</div><div style="font-size:15px;font-family: SimHei;color:#ff8004;">2300起</div></a>
+          <a href="<#ZC_BLOG_HOST#>?cat=1" target="_blank"><img src="{$season[0].image}.jpg" width="145" height="145" alt="一号图片"  onload="return imgzoom(this,600);" onclick="javascript:window.open(this.src);" style="cursor:pointer;"/></a>
+          <a href="<#ZC_BLOG_HOST#>?cat=1" target="_blank"><div style="font-size:15px;font-family: SimHei;color:#046bb3;">{$season[0].name}</div><div style="font-size:15px;font-family: SimHei;color:#ff8004;">{$season[0].price}起</div></a>
 
          </div>
+      
  <div class="pic">
-          <a href="<#ZC_BLOG_HOST#>?cat=2" target="_blank"><img src="__IMG__/youhui2.jpg" width="145" height="145" alt="二号图片"  onload="return imgzoom(this,600);" onclick="javascript:window.open(this.src);" style="cursor:pointer;"/></a>
-          <a href="<#ZC_BLOG_HOST#>?cat=2" target="_blank">二号图片</a>
+          <a href="<#ZC_BLOG_HOST#>?cat=2" target="_blank"><img src="{$season[1].image}.jpg" width="145" height="145" alt="二号图片"  onload="return imgzoom(this,600);" onclick="javascript:window.open(this.src);" style="cursor:pointer;"/></a>
+          <a href="<#ZC_BLOG_HOST#>?cat=2" target="_blank"><div style="font-size:15px;font-family: SimHei;color:#046bb3;">{$season[1].name}</div><div style="font-size:15px;font-family: SimHei;color:#ff8004;">{$season[1].price}起</div></a>
 
          </div>
          <div class="pic">
-          <a href="<#ZC_BLOG_HOST#>?cat=3" target="_blank"><img src="__IMG__/youhui3.jpg" width="145" height="145" alt="三号图片"  onload="return imgzoom(this,600);" onclick="javascript:window.open(this.src);" style="cursor:pointer;"/></a>
-          <a href="<#ZC_BLOG_HOST#>?cat=3" target="_blank">三号图片</a>
+          <a href="<#ZC_BLOG_HOST#>?cat=3" target="_blank"><img src="{$season[2].image}.jpg" width="145" height="145" alt="三号图片"  onload="return imgzoom(this,600);" onclick="javascript:window.open(this.src);" style="cursor:pointer;"/></a>
+          <a href="<#ZC_BLOG_HOST#>?cat=3" target="_blank"><div style="font-size:15px;font-family: SimHei;color:#046bb3;">{$season[2].name}</div><div style="font-size:15px;font-family: SimHei;color:#ff8004;">{$season[2].price}起</div></a>
 
          </div>
          <div class="pic">
           <a href="<#ZC_BLOG_HOST#>?cat=4" target="_blank"><img src="/image/4.jpg" width="145" height="145" alt="四号图片"  onload="return imgzoom(this,600);" onclick="javascript:window.open(this.src);" style="cursor:pointer;"/></a>
-          <a href="<#ZC_BLOG_HOST#>?cat=4" target="_blank">四号图片</a>
+          <a href="<#ZC_BLOG_HOST#>?cat=4" target="_blank"><div style="font-size:15px;font-family: SimHei;color:#046bb3;">{$season[3].name}</div><div style="font-size:15px;font-family: SimHei;color:#ff8004;">{$season[3].price}起</div></a>
 
          </div>
          <div class="pic">
