--- a/steptu/Web/Tpl/index/travelStore/travelStore.html
+++ b/steptu/Web/Tpl/index/travelStore/travelStore.html
@@ -166,10 +166,10 @@ background-color: #d2dffe;
       </div>
 <!-- 这是吃的每层楼的div 最多显示三个，你来做页码 -->
 <foreach name='content' item='v'>
-       <div class="chiceng" name="成都市一环路东一段">
+       <div class="chiceng" name="{$v.area}">
           <div class="chicengtu" id="chicengtu"><img src="../Public/images/travelstore/chitu.jpg" width="145" height="95"></div>
           <div style="position:relative;top:5px;left:3px;font-size:14px;word-break: break-all;">店名:<span id="smdianming" style="font-size:14;">{$v.storeName}</span></div>
-          <div style="position:relative;top:5px;left:3px;font-size:14px;word-break: break-all;">地址:<span class="smdizhi" >成都市一环路东一段</span></div>
+          <div style="position:relative;top:5px;left:3px;font-size:14px;word-break: break-all;">地址:<span class="smdizhi" >{$v.area}</span></div>
           <div style="position:relative;top:5px;left:3px;font-size:14px;word-break: break-all;">电话:<span id="smdianhua">{$v.phone}</span></div>
 </div>
 </foreach>
@@ -574,7 +574,7 @@ var weizhishangchuan = "不限";
 
 
   $("#zhusousuomudidi").blur(function(){
-		var url = '{:U('Index/travelStore/living')}';
+		var url = '{:U(\'Index/travelStore/living\')}';
      $.post(url,{data:$("#zhusousuomudidi").val()},function(data){
 
       // alert(data['address'][2]);
