--- a/steptu/Web/Tpl/index/Index/index.html
+++ b/steptu/Web/Tpl/index/Index/index.html
@@ -24,6 +24,13 @@ jQuery(document).ready(function($) {
 
 })
 </script>
+<script type="text/javascript">
+function showjieguo(){
+    zhuhaohuajieguo.style.display="block";
+    zhuhaohuatu.style.display="none";
+}
+
+</script>
 </head>
 <body >
 
@@ -115,7 +122,10 @@ background-repeat: no-repeat;
 	<img src="__IMG__/lvyouzhi1.png" class="lvyouzhi">
   <img src="__IMG__/lvyouzhi2.png" class="lvyouzhi2">
 	<div class="lvyouzhicontent">
-		
+      <img src="" style="width:150px;height:150px;margin:15px 0 0 15px;">
+     
+    <div style=" word-wrap:break-word; word-break:break-all;width:150px;margin:5px 0 0 15px;font-size:14px;"> 735dsjfhudshfjkdhsfjkhasdkjfhkdsjafhkdsahfkjdhsflkjdashfljsdhfalkj</div>
+	
 	</div>
   <div class="zhuhaohuaform">
   <form action="" name="zhuxianghaohua" method="post" >
@@ -127,11 +137,12 @@ background-repeat: no-repeat;
   <option value="洲际酒店">洲际酒店</option>
 </select>
   
-  <div style="position:absolute;left:50px;top:180px;"><input type="image" src="__IMG__/search.png" style="border:0;" ></div>
+  <div style="position:absolute;left:50px;top:180px;"><input type="image" src="__IMG__/search.png" style="border:0;" onclick="showjieguo()" />
+  </div>
   </form>
   </div>
   <img src="__IMG__/zhufenge.png" class="zhufenge">
-  <div class="zhuhaohuatu">
+  <div class="zhuhaohuatu" id="zhuhaohuatu">
 
 <div id="demo" style="height:250px;width:280px; overflow:hidden; ">
 <div id="demo1">
@@ -142,7 +153,31 @@ background-repeat: no-repeat;
 <div id="demo2"></div>
 </div>
 
-  </div>
+  </div> 
+<div style="position: absolute;left: 230px;top: 280px;height: 234px;width: 288px;display:none" id="zhuhaohuajieguo">
+
+<div style="position:absolute;left:10px;width:130px;height:100px;">
+<img src="" style="width:130px;height:70px;">
+<div style="font-size:13px;width:130px;">喜来登 <span style="position:absolute;left:90px;color:#ff8004;">￥500</span></div>
+</div>
+
+<div style="position:absolute;left:150px;width:130px;height:100px;">
+<img src="" style="width:130px;height:70px;">
+<div style="font-size:13px;width:130px;">喜来登 <span style="position:absolute;left:90px;color:#ff8004;">￥500</span></div>
+</div>
+
+<div style="position:absolute;left:10px;top:120px;width:130px;height:100px;">
+<img src="" style="width:130px;height:70px;">
+<div style="font-size:13px;width:130px;">喜来登 <span style="position:absolute;left:90px;color:#ff8004;">￥500</span></div>
+</div>
+
+<div style="position:absolute;left:150px;top:120px;width:130px;height:100px;">
+<img src="" style="width:130px;height:70px;">
+<div style="font-size:13px;width:130px;">喜来登 <span style="position:absolute;left:90px;color:#ff8004;">￥500</span></div>
+</div>
+
+</div>
+
 </div>
 	    
 	
