--- a/steptu/Web/Tpl/index/travelStore/smsousuojieguo.html
+++ b/steptu/Web/Tpl/index/travelStore/smsousuojieguo.html
@@ -116,7 +116,7 @@ background-color: #d2dffe;
             <div class="jiudianceng">
              <img src="../Public/images/travelstore/fengexian2.png">
               <div  class="jiudiancengshu">1</div>
-              <span class="jiudianming">{$v.hotelName}</span>
+            <a href="{:U('Index/travelStore/jiudian','','')}/id/{$v.id}" > <span class="jiudianming">{$v.hotelName}</span></a>
               <div class="jiudianjiage">￥{$v.price}&nbsp<span class="jiudianjiageqi">起</span></div>
               <img src="../Public/images/travelstore/ditubiaozhi.png" class="ditubiaozhi" name="成都市一环路东一段">
               <div class="jiudiancengdizhi">地址：{$v.area}</div>
