w Please enter the commit message for your changes. Lines starting

--- a/steptu/Web/Tpl/index/vipCenter/myFelling.html
+++ b/steptu/Web/Tpl/index/vipCenter/myFelling.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../Public/css/index.css" media="all" type="text/css">
-    <title>我的订单</title>
+    <title>旅游随感</title>
     <script src="../Public/js/jquery-easyui-1.4.2/jquery.min.js"></script>
     <script src="../Public/js/jquery-easyui-1.4.2/jquery.easyui.min.js"></script>
     <script src="../Public/js/jquery-easyui-1.4.2/locale/easyui-lang-zh_CN.js"></script>
@@ -55,46 +55,55 @@
         <div class="dearVIP">
             <img src="../Public/images/vipCenter/point.png">
             <div class="realDearVIP">
-                尊敬的会员<span>{$user.name}</span>，欢迎你！<br/>
-                手机号码：<span>{$user.phone}</span>  |  邮箱地址：<span>{$user.email}</span>
+                尊敬的会员<span>nimabu</span>，欢迎你！<br/>
+                手机号码：<span>12345678900</span>  |  邮箱地址：<span>1234567@qq.com</span>
             </div>
         </div>
         <div class="border">
             <div class="empty"></div>
-            <div id="myOrders">    <!-- 我的订单-->
-                <div class="realOrders">
+            <div id="myFelling">    <!-- 我的订单-->
+                <div class="realFelling">
                     <table>
-                        <tr style="background-color: #9ccde7;height: 30px;text-align: left;font-size: 12px">
-                            <th width="175px">时间</th>
-                            <th width="175px">订单号</th>
-                            <th width="200px">内容</th>
-                            <th width="100px">查看订单</th>
-                            <th width="50px">评价</th>
+                        <tr>
+                            <td>主题：</td>
+                            <td><label><input type="text" class="easyui-textbox" style="width: 300px"></label></td>
                         </tr>
-                        <foreach name="list" item='v'>
-                            <tr>  <!--这里也是每增加一条，就增加一个tr -->
-                            <td>{$v.time}</td>
-                            <td>{$v.id}</td>
-                            <td>{$v.content}</td>
-                            <td><a href=""> 查看</a></td>
-                            <td><a href='{:U("Index/vipCenter/myEvaluations","","")}/travelId/{$v.scencyId}'> 评价 </a></td>
+                        <tr>
+                            <td>正文：</td>
+                            <td><textarea style="width: 600px;height: 150px"></textarea></td> <!--把 这里换成编辑框  大小差不多按照这个来适当调整就ok -->
                         </tr>
-                        </foreach>                        
                     </table>
-                    {$show}
+                    <button class="uploadImage" onclick="fileSelect()">上传图片</button>
+                    <div class="alreadyUpload">
+                        <div class="leftWords">
+                            &nbsp;点<br/>
+                            &nbsp;击<br/>
+                            已图<br/>
+                            上片<br/>
+                            传插<br/>
+                            图入<br/>
+                            片正<br/>
+                            &nbsp;文<br/>
+                            &nbsp;中
+                        </div>
+                        <div id="pictures">
+                            <img src="../Public/images/vipCenter/upload.png">
+                            <img src="../Public/images/vipCenter/upload.png">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-   
-        <div class="navbar">
-            <div class="userHead">
+    <div class="navbar">
+        <div class="userHead">
             <div class="imageBox">
-                <img id="imgHead" src="../Public/images/vipCenter/head.png">
+                <img src="../Public/images/vipCenter/head.png">
                 <a onclick="fileSelect()">上传头像</a>  <!-- -->
             </div>
-            <span>{$user.name}</span>
-            <form id="form_face" method="post" enctype="multipart/form-data" style="width:auto;">  <!--  上传头像提交表单-->
+            <span>Username</span>
+
+            <form id="form_face" enctype="multipart/form-data" style="width:auto;">  <!--  上传头像提交表单-->
                 <input type="file" accept="image/gif, image/png, image/jpeg" name="fileToUpload" id="fileToUpload" onchange="fileSelected();" style="display:none;">
             </form>
             <script type="text/javascript">  <!--上传头像函数 -->
@@ -103,47 +112,34 @@
             }
             function fileSelected() {
                 // 文件选择后触发次函数
-                var option = {
-                    url: "{:U('Index/vipCenter/handUploadImage','','')}",
-                    success: showResponse
-
-                };
-                $('#form_face').ajaxForm(option).submit();
-
-            }
-            function showResponse(data){
-                if (data["msg"] == 1) {
-                     $("#imgHead").attr('src',"/travel/steptu/"+data["path"]);
-                }else{
-                    alert(data["path"]);
-                }
             }
             </script>
+
         </div>
-            <div class="realNavbar">
+        <div class="realNavbar">
             <div class="realNavbarContent">
-                <img src="../Public/images/vipCenter/point.png"><a href="{:U('Index/vipCenter/myOrders','','')}">我的订单</a>
+                <img src="../Public/images/vipCenter/point.png"><a href="myOrders.html">我的订单</a>
             </div>
             <div class="realNavbarContent">
-                    <img src="../Public/images/vipCenter/point.png"><a href="{:U('Index/vipCenter/myGrades','','')}">我的积分 | 奖励</a>
+                <img src="../Public/images/vipCenter/point.png"><a href="myGrades.html">我的积分 | 奖励</a>
             </div>
             <div class="realNavbarContent">
-                <img src="../Public/images/vipCenter/point.png"><a href="{:U('Index/vipCenter/myEvaluations','','')}/juge/3">我的评价</a>
+                <img src="../Public/images/vipCenter/point.png"><a href="myEvaluations.html">我的评价</a>
             </div>
             <div class="realNavbarContent">
-                <img src="../Public/images/vipCenter/point.png"><a href="{:U('Index/vipCenter/myInformation','','')}">我的信息</a>
+                <img src="../Public/images/vipCenter/point.png"><a href="myInformation.html">我的信息</a>
             </div>
             <div class="realNavbarContent">
                 <img src="../Public/images/vipCenter/point.png"><a href="myMoneyPot.html">我的储钱罐旅行计划</a>
             </div>
             <div class="realNavbarContent">
-                <img src="../Public/images/vipCenter/point.png"><a href="{:U('Index/vipCenter/myTravealBook','','')}">写给未来的信</a>
+                <img src="../Public/images/vipCenter/point.png"><a href="myTravealBook.html">写给未来的信</a>
             </div>
             <div class="realNavbarContent">
-                    <img src="../Public/images/vipCenter/point.png"><a href="{:U('Index/vipCenter/myFelling','','')}">旅游随感</a>
+                <img src="../Public/images/vipCenter/point.png"><a href="myFelling.html">旅游随感</a>
             </div>
         </div>
-        </div>
+    </div>
     <div>
         <div class="bottom"></div>
         <div class="bottomsm">
