--- a/steptu/Web/Tpl/index/package/order_3.html
+++ b/steptu/Web/Tpl/index/package/order_3.html
@@ -41,20 +41,50 @@
                 <div class="comfirmTravelInfo">
                     么么哒
                 </div>
-                <label class="lastButton" id="up" onclick="window.history.back(-1)">上一步</label>
+                <button class="lastButton">上一步</button>
                 <button class="nexyButton">下一步</button>
-                
             </div>
         </div>
     </div>
 
     <div>
         <div class="bottom"></div>
-        <div class="bottomsm"><span class="bottombiao">旅游超市</span><div class="bottomxuanxiang">住<br>吃货</div></div>
-        <div class="bottompersonal"><span class="bottombiao">会员中心</span><div class="bottomxuanxiang1">我的订单<br>我的奖励<br>我的积分<br>我的评价<br>我的信息<br>我的储钱罐旅行计划</span><br>找朋友</div> </div>
-        <div class="bottombook"><span class="bottombiao">旅游志</span><div class="bottomxuanxiang">旅游随感<br>写给未来的信</div></div>
-        <div class="weishenme"><span class="bottombiao">主题旅游</span><div class="bottomxuanxiang">城市之间<br>学子游<br>年休假<br>美食游</div></div>
-        <div class="bottomaboutus"><span class="bottombiao">关于游记</span><div class="bottomxuanxiang">关于我们<br>联系我们<br>一起合作<br>用户协议<br>诚聘英才</div></div>
+        <div class="bottomsm">
+            <span class="bottombiao">旅游超市</span>
+            <div class="bottomxuanxiang">
+                <a href="{:U('Index/travelStore/smsousuojieguo')}">住</a><br>
+                <a href="{:U('Index/travelStore/travelStore')}">吃货</a>
+            </div>
+        </div>
+        <div class="bottompersonal">
+            <span class="bottombiao">会员中心</span>
+            <div class="bottomxuanxiang1">
+                <a href="{:U('Index/vipCenter/myOrders')}"> 我的订单</a><br>
+                <a href="{:U('Index/vipCenter/myGrades')}">我的积分</a> <br>
+                <a href="{:U('Index/vipCenter/myEvaluations')}"> 我的评价</a><br>
+                <a href="{:U('Index/vipCenter/myInformation')}">我的信息</a> <br>
+                <a href="{:U('Index/vipCenter/myMoneyPot')}">我的储钱罐旅行计划</a><br>
+            </div>
+        </div>
+        <div class="bottombook">
+            <span class="bottombiao">旅游志</span>
+            <div class="bottomxuanxiang">
+                <a href="{:U('Index/travelBook/travelBook')}">旅游随感</a> <br>
+                <a href="{:U('Index/travelBook/letterList')}"> 写给未来的信</a></div>
+        </div>
+        <div class="weishenme">
+            <span class="bottombiao">主题旅游</span>
+            <div class="bottomxuanxiang"><a href="{:U('Index/travelTheme/travelTheme')}">城市之间</a><br>
+                <a href="{:U('Index/travelTheme/travelTheme')}"> 学子游</a><br>
+                <a href="{:U('Index/travelTheme/travelTheme')}">年休假</a><br>
+                <a href="{:U('Index/travelTheme/travelTheme')}">美食游</a></div></div>
+        <div class="bottomaboutus"><span class="bottombiao">关于游记</span><div class="bottomxuanxiang">
+            <a href="{:U('Index/index/aboutUs')}">关于我们</a><br>
+            <a href="{:U('Index/index/aboutUs')}">联系我们</a><br>
+            <a href="{:U('Index/index/aboutUs')}">一起合作</a><br>
+            <a href="{:U('Index/index/aboutUs')}">用户协议</a><br>
+            <a href="{:U('Index/index/aboutUs')}">诚聘英才</a></div>
+        </div>
     </div>
     <img src="../Public/images/steptu.png" class="steptu">
     <img src="../Public/images/banquan.png" class="banquan">
